--- a/index.html
+++ b/index.html
@@ -58,13 +58,34 @@
                         }
                 }
             }
-
-
-
-
-            console.log(playRound("ROCK", computerPlay()));
             
             // Write a function called game and call the playRound function inside game to play 5 rounds and keep score. Also report winner or loser at the end.
+            function game() {
+                // create a variable to store no of wins by computer.
+                // create another variable to store no. of wins by the player.
+                let compWin = 0;
+                let playerWin = 0;
+                // create a loop and call playRound() function 5 times in it.
+                // each iteration should ask for player selection.
+                // each iteration should add the number of wins to variable(created above) of the winner.
+                
+                playerChoiceLoop: 
+                for (let i = 0; i <= 4; i++ ) {
+                    let playerChoice = prompt("Enter your selection either ROCK, PAPER or SCISSORS for round number " + (i + 1));
+                    playerChoice = playerChoice.toUpperCase();
+
+                    if (!(playerChoice == "ROCK" || playerChoice == "PAPER" || playerChoice == "SCISSORS")) {
+                        console.log("Wrong Choice! Select again."); 
+                        i = i - 1;
+                        console.log(i);
+                        continue playerChoiceLoop;
+                    }
+                    let winOrLose = playRound(playerChoice, computerPlay());
+                    console.log(winOrLose);
+                }
+                // after the game ends the winner name is printed with the result.
+            }
+            game();
         </script>
     </body>
 </html>
