--- a/index.html
+++ b/index.html
@@ -68,22 +68,32 @@
                 // create a loop and call playRound() function 5 times in it.
                 // each iteration should ask for player selection.
                 // each iteration should add the number of wins to variable(created above) of the winner.
-                
                 playerChoiceLoop: 
-                for (let i = 0; i <= 4; i++ ) {
+                for (let i = 0; i <= 4; i++) {
                     let playerChoice = prompt("Enter your selection either ROCK, PAPER or SCISSORS for round number " + (i + 1));
+                    if (playerChoice == null) {
+                        console.log("Good Bye!");
+                        return;
+                    }
                     playerChoice = playerChoice.toUpperCase();
 
                     if (!(playerChoice == "ROCK" || playerChoice == "PAPER" || playerChoice == "SCISSORS")) {
                         console.log("Wrong Choice! Select again."); 
                         i = i - 1;
-                        console.log(i);
                         continue playerChoiceLoop;
                     }
                     let winOrLose = playRound(playerChoice, computerPlay());
                     console.log(winOrLose);
+                    if (winOrLose.includes("Win")) {
+                        playerWin += 1;
+                    } else if (winOrLose.includes("Lose")) {
+                        compWin += 1;
+                    }
                 }
                 // after the game ends the winner name is printed with the result.
+                console.log(`Player Wins: ${playerWin}, Computer Wins: ${compWin}`);
+                (playerWin > compWin) ? console.log("Hooray! Player wins the Game.") 
+                :(playerWin < compWin) ? console.log("Player Lost and Computer Won.") : console.log("It's a tie.");
             }
             game();
         </script>
