--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 }
             }
             
-            // Write a function called game and call the playRound function inside game to play 5 rounds and keep score. Also report winner or loser at the end.
+            // Write a function game and call the playRound function inside game to play 5 rounds and keep score. Also report winner or loser at the end.
             function game() {
                 // create a variable to store no of wins by computer.
                 // create another variable to store no. of wins by the player.
