Testing git branches

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <!-- Added some random text to learn branching in git -->
         <script>
             // Write a function computerPlay that randomly selects either of the three options of rock, paper or scissors.
             function computerPlay() {
